[package]
name = "deno_winit"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[dependencies]
winit = { version = "0.29.15" }
cursor-icon = "1.1.0"
image = "0.25.0"
simple_logger = "4.3.3"
