[package]
name = "deno_winit"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[dependencies]
winit = { version = "0.29.15", features = ["rwh_05"] }
image = "0.25.0"
raw-window-handle = { version = "0.5.2", features = ["std"] }
